calendar bags, colors, headers

--- a/public/new-assets/less/base.css
+++ b/public/new-assets/less/base.css
@@ -3033,7 +3033,10 @@ select::-ms-expand {
   margin-bottom: 0;
 }
 .div-c.inline-2 .divided-column input[type="text"]:disabled{
-  border-color: #ffc6c6;
+  background-color: #eaeaea;
+}
+.div-c.inline-2 .divided-column input[type="number"]:disabled{
+  background-color: #eaeaea;
 }
 .div-c.inline-3.no-padding .divided-column {
   margin-bottom: 0;
