--- a/public/new-assets/less/theme.css
+++ b/public/new-assets/less/theme.css
@@ -12476,7 +12476,7 @@ select.ui.dropdown {
   color: #f57c00;
 }
 .calendar-sq .ui.table tbody tr td.link.focus:before {
-  border-color: #D4D4D4;
+  border-color: #ffffff;
 }
 .calendar-sq .ui.table tbody tr td.link.active,
 .calendar-sq .ui.table tbody tr td.link.active.focus {
@@ -12486,8 +12486,8 @@ select.ui.dropdown {
 }
 .calendar-sq .ui.table tbody tr td.link.active:before,
 .calendar-sq .ui.table tbody tr td.link.active.focus:before {
-  background: #F57C00;
-  border-color: #F57C00;
+  background: #ffffff;
+  border-color: #ffffff;
 }
 .calendar-sq .ui.table tbody tr td.link.range,
 .calendar-sq .ui.table tbody tr td.link.range.focus {
