--- a/public/css/scss/validation/validation.scss
+++ b/public/css/scss/validation/validation.scss
@@ -9,9 +9,12 @@
 }
 
 .warning {
-  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #d72121 !important;
+  //box-shadow: 0 0 0 2px #fff, 0 0 0 4px #d72121 !important;
+  border: 1px solid #ff0000 !important;
 }
 
 .req-check, .req-select {
-  transition: box-shadow 400ms ease !important;
+  //transition: box-shadow 400ms ease !important;
+  transition: border 400ms ease !important;
+
 }
