--- a/public/css/scss/share/share-venue.scss
+++ b/public/css/scss/share/share-venue.scss
@@ -1,5 +1,19 @@
 $orange: #FF5722;
-$grey: #aaa;
+$grey: #AAAAAA;
+
+.button-submit {
+  opacity: 0;
+  display: none;
+}
+
+.prev-btn {
+  background-color: #7d7d7d !important;
+  visibility: hidden;
+  opacity: 0;
+  &:hover {
+    background-color: #6d6d6d !important;
+  }
+}
 
 .add-listing-content {
   margin-bottom: 120px;
@@ -19,7 +33,7 @@ $grey: #aaa;
       top: 0;
       transform: translateY(0);
       #map {
-
+      
       }
     }
     .sticky-img {
@@ -34,7 +48,7 @@ $grey: #aaa;
   }
 }
 
-.add-listing-footer{
+.add-listing-footer {
   position: fixed;
   width: 100%;
   bottom: 0;
@@ -49,7 +63,7 @@ $grey: #aaa;
         margin: 0 0.5em;
         display: flex;
         align-items: center;
-        &::before{
+        &::before {
           content: '';
           border-radius: 50%;
           display: inline-block;
@@ -58,7 +72,7 @@ $grey: #aaa;
           height: 1em;
         }
         &.pagination-active {
-          &::before{
+          &::before {
             background-color: $orange;
           }
         }
@@ -140,7 +154,7 @@ $grey: #aaa;
       width: 5em;
       height: 4em;
       background-color: $grey;
-      transition: background-color 200ms cubic-bezier(.45,.05,.55,.95);
+      transition: background-color 200ms cubic-bezier(.45, .05, .55, .95);
       border: 0;
       outline: 0;
       &::-moz-focus-inner {
@@ -164,7 +178,7 @@ $grey: #aaa;
       height: auto;
       .divided-column {
         input {
-
+        
         }
       }
     }
