--- a/public/css/scss/share/share-venue.scss
+++ b/public/css/scss/share/share-venue.scss
@@ -1,4 +1,4 @@
-$orange: #FF5722;
+$orange: #FF7503;
 $grey: #AAAAAA;
 
 .button-submit {
@@ -86,6 +86,9 @@ $grey: #AAAAAA;
   padding-bottom: 30px;
 }
 
+.selected {
+  box-shadow: 0 0 0 3px #fff, 0 0 0 6px $orange !important;
+}
 .photo-upload {
   & > div {
     justify-content: space-around;
