--- a/public/new-assets/less/header.css
+++ b/public/new-assets/less/header.css
@@ -4742,19 +4742,22 @@ body {
 }
 
 .menu-default.burger-modal-styles.modal-is-visible {
-    opacity: 1;
+    opacity: 1 !important;
     top: 0;
     height: 100%;
     overflow-x: hidden;
     -ms-flex-item-align: start;
     -webkit-align-self: flex-start;
     align-self: flex-start;
+
 }
 
 .burger-modal-styles.search-visible.modal-is-visible {
     top: 0 !important;
     height: 100% !important;
     overflow: hidden;
+    opacity: 1!important;
+    visibility: visible;
 }
 
 .burger-modal-styles.search-visible.modal-is-visible > *:not(.modal-trigger) {
